// This file defines the trading related data types that do not belong to the
// ledger state.

syntax = "proto3";

package dex;

option go_package = "github.com/gisvr/defi-common/proto/dex2";

message Depth {
  string cash_token_id = 1;
  string stock_token_id = 2;

  // The timestamp in millisecond of this depth data.
  int64 time_ms = 3;

  // Entries selling the stock token for the cash token. Ascending by price.
  repeated DepthEntry asks = 4;

  // Entries buying the stock token with the cash token. Descending by price.
  repeated DepthEntry bids = 5;
}

message DepthEntry {
  // The price level (multiplied by 1e8) of this entry.
  uint64 price_e8 = 1;

  // The total amount (multiplied by 1e8) of stock token available at this price.
  uint64 amount_e8 = 2;

  // The total value of the entry WITHOUT multiplying 1e8.
  double total_value = 3;
}

message TxInfo {
  string tx_hash = 1;
  int64 block_height = 2;
  int64 time_sec = 3;
}
